; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Cedar.c_StartCedarLog.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Cedar.c_StartCedarLog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cedar_log_ref = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [10 x i8] c"debug_log\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"debug\00", align 1
@LOG_SWITCH_DAY = common dso_local global i32 0, align 4
@cedar_log = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @StartCedarLog() #0 {
  %1 = load i32*, i32** @cedar_log_ref, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32* (...) @NewRef()
  store i32* %4, i32** @cedar_log_ref, align 8
  br label %8

5:                                                ; preds = %0
  %6 = load i32*, i32** @cedar_log_ref, align 8
  %7 = call i32 @AddRef(i32* %6)
  br label %8

8:                                                ; preds = %5, %3
  %9 = load i32, i32* @LOG_SWITCH_DAY, align 4
  %10 = call i32 @NewLog(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %9)
  store i32 %10, i32* @cedar_log, align 4
  ret void
}

declare dso_local i32* @NewRef(...) #1

declare dso_local i32 @AddRef(i32*) #1

declare dso_local i32 @NewLog(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
